<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".inscription">

    <ImageView
        android:id="@+id/logosignin"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:contentDescription="@string/logo"
        android:translationY="30dp"
        app:srcCompat="@drawable/logo_humadvisor_sans_fond_bleut" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:fontFamily="@font/hind_guntur_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#2D3748"
        android:textSize="35sp"
        android:translationX="90dp"
        android:translationY="160dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/hind_guntur_light"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:translationX="60dp"
        android:translationY="230dp" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/hind_guntur_light"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:translationX="60dp"
        android:translationY="290dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/hind_guntur_light"
        android:hint="@string/password"
        android:inputType="textPassword|textWebPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:translationX="60dp"
        android:translationY="350dp" />

    <EditText
        android:id="@+id/passwordconfirm"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/hind_guntur_light"
        android:hint="@string/ConfirmPassword"
        android:inputType="textPassword|textWebPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:translationX="60dp"
        android:translationY="410dp" />


    <Button
        android:id="@+id/registerbutton"
        android:layout_width="297dp"
        android:layout_height="62dp"
        android:backgroundTint="#2D3748"
        android:fontFamily="@font/hind_guntur_light"
        android:text="@string/SignUp"
        android:textSize="17sp"
        android:translationX="60dp"
        android:translationY="480dp" />


    <ImageButton
        android:id="@+id/ib2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="342dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/arrow"
        android:scaleType="fitCenter"
        android:src="@drawable/backarrow"
        android:translationX="10dp"
        android:translationY="20dp" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />



</RelativeLayout>