<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:background="@drawable/background"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:text="@string/profile2"
            android:padding="25sp"
            />

        <ImageView
            android:id="@+id/noprofilepicture"
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            app:srcCompat="@drawable/profil"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/profile_picture"
            />

        <TextView
            android:id="@+id/username_textedit"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:textSize="25sp"
            android:background="@drawable/background"
            android:text="TODO (strings/username_2)"
            android:padding="25sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:text="@string/rate_user"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background"
            />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_1"
        android:background="@drawable/background"
        android:layout_below="@+id/linear_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_2"
            android:padding="25sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/confort_textedit"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:textSize="25sp"
                android:padding="5sp"
                android:text="TODO (strings/confort)"/>

            <TextView
                android:id="@+id/sympa_textedit"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:textSize="25sp"
                android:padding="5sp"
                android:text="TODO (strings/sympathie)"/>

            <TextView
                android:id="@+id/sociable_textedit"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:textSize="25sp"
                android:padding="5sp"
                android:text="TODO (strings/sociabilité)"/>

            <TextView
                android:id="@+id/intel_textedit"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:textSize="25sp"
                android:padding="5sp"
                android:text="TODO (strings/intelligence)"/>

            <TextView
                android:id="@+id/beaute_textedit"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:textSize="25sp"
                android:padding="5sp"
                android:text="TODO (strings/beauté)"/>

            <TextView
                android:id="@+id/global_textedit"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:textSize="25sp"
                android:padding="5sp"
                android:text="TODO (strings/global)"/>


        </LinearLayout>



    </ScrollView>

</RelativeLayout>